--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flexigpt",
   "displayName": "FlexiGPT",
   "description": "Interact with GPT AI models (GPT3, ChatGPT, etc) as a power user",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "publisher": "ppipada",
   "pricing": "Free",
   "icon": "resources/extensionIcon.png",
@@ -131,6 +131,7 @@
     "eslint": "^8.28.0",
     "glob": "^8.0.3",
     "mocha": "^10.1.0",
+    "npm-version": "^1.1.0",
     "openai": "^3.1.0",
     "rimraf": "^4.1.2",
     "ts-loader": "^9.4.2",
