--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "engines": {
     "vscode": "^1.74.0",
-    "node": "^19.0.0"
+    "vscode-insiders": "^1.74.0"
   },
   "categories": [
     "Other"
@@ -148,8 +148,5 @@
     "rimraf": "^4.1.2",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.3"
-  },
-  "dependencies": {
-    "chatgpt": "^4.2.0"
   }
 }
