--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "keywords": [
     "openai",
+    "prompt engineering",
     "gpt3",
     "chatgpt",
     "ai",
@@ -139,8 +140,10 @@
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
+    "@types/highlight.js": "^10.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18",
+    "@types/prettier": "^2.7.2",
     "@types/uuid": "^9.0.0",
     "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -157,6 +160,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "prettier": "^2.8.4",
     "uuid": "^9.0.0"
   }
 }
