fix issue 3 and add tests

--- a/package.json
+++ b/package.json
@@ -137,35 +137,37 @@
     "compile": "npm run -S esbuild-base --no-cache -- --sourcemap",
     "watch": "npm run -S esbuild-base --no-cache -- --sourcemap",
     "fmt": "prettier --write \"src/**/*.ts\"&& npm run test -- --fix",
-    "test": "eslint src --ext ts && tsc --noEmit",
+    "test": "node ./out/test/runTest.js",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "pretest": "npm run compile-tests && npm run lint",
     "lint": "eslint src --ext ts",
     "debug": "node --inspect-brk $(which vscode-inspect-brk) . --extensionDevelopmentPath=/Users/pankajpipada/github/vscode-flexigpt"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "@types/glob": "^8.0.0",
-    "@types/highlight.js": "^10.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18",
-    "@types/prettier": "^2.7.2",
-    "@types/uuid": "^9.0.0",
-    "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vscode/test-electron": "^2.2.0",
+    "chai": "^4.3.7",
     "esbuild": "^0.17.5",
     "eslint": "^8.28.0",
     "glob": "^8.0.3",
-    "mocha": "^10.1.0",
+    "mocha": "^10.2.0",
     "npm-version": "^1.1.0",
-    "openai": "^3.1.0",
     "rimraf": "^4.1.2",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@types/highlight.js": "^10.1.0",
+    "@types/prettier": "^2.7.2",
+    "@types/uuid": "^9.0.1",
+    "@types/vscode": "^1.76.0",
+    "openai": "^3.2.1",
     "prettier": "^2.8.4",
     "uuid": "^9.0.0"
   }
