--- a/package.json
+++ b/package.json
@@ -130,8 +130,13 @@
       }
     }
   },
+  "files": [
+    "conversations.yml"
+  ],
   "scripts": {
-    "vscode:prepublish": "npm run esbuild-base -- --minify",
+    "prepublish": "npm run truncate-yaml",
+    "vscode:prepublish": "prepublish && npm run esbuild-base -- --minify",
+    "truncate-yaml": "echo '' > ./conversations.yml",
     "esbuild-base": "rimraf out && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
     "build": "npm run -S esbuild-base --no-cache -- --sourcemap",
     "compile": "npm run -S esbuild-base --no-cache -- --sourcemap",
@@ -147,6 +152,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/glob": "^8.0.0",
+    "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -167,6 +173,7 @@
     "@types/prettier": "^2.7.2",
     "@types/uuid": "^9.0.1",
     "@types/vscode": "^1.76.0",
+    "js-yaml": "^4.1.0",
     "openai": "^3.2.1",
     "prettier": "^2.8.4",
     "uuid": "^9.0.0"
