--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flexigpt",
   "displayName": "FlexiGPT",
-  "description": "Interact with GPT AI models (GPT3, ChatGPT, etc) as a power user",
+  "description": "Interact with GPT AI models (GPT3/3.5/4, Anthropic Claude, HuggingFace Inference API, GoogleGL i.e PaLM API, etc) as a power user",
   "version": "0.9.5",
   "publisher": "ppipada",
   "pricing": "Free",
