--- a/package.json
+++ b/package.json
@@ -229,6 +229,7 @@
     "@types/glob": "^8.0.0",
     "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^10.0.1",
+    "@types/mustache": "^4.2.2",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
@@ -250,6 +251,7 @@
     "@types/vscode": "^1.76.0",
     "axios": "^1.4.0",
     "js-yaml": "^4.1.0",
+    "mustache": "^4.2.0",
     "prettier": "^2.8.4",
     "uuid": "^9.0.0"
   }
