--- a/package.json
+++ b/package.json
@@ -316,26 +316,58 @@
     "debug": "node --inspect-brk $(which vscode-inspect-brk) . --extensionDevelopmentPath=/Users/pankajpipada/github/vscode-flexigpt"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@nx/cypress": "16.8.1",
+    "@nx/jest": "16.8.1",
+    "@nx/js": "16.8.1",
+    "@nx/react": "^16.8.1",
+    "@nx/webpack": "16.8.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
+    "@testing-library/react": "14.0.0",
     "@types/chai": "^4.3.4",
     "@types/glob": "^8.0.0",
+    "@types/jest": "^29.4.0",
     "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^10.0.1",
     "@types/mustache": "^4.2.2",
-    "@types/node": "^18.11.18",
+    "@types/node": "18.14.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vscode/test-electron": "^2.2.0",
+    "autoprefixer": "10.4.13",
+    "babel-jest": "^29.4.1",
     "chai": "^4.3.7",
+    "cypress": "^13.0.0",
     "esbuild": "^0.17.5",
-    "eslint": "^8.28.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "glob": "^8.0.3",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "mocha": "^10.2.0",
     "npm-version": "^1.1.0",
+    "postcss": "8.4.21",
+    "prettier": "^3.0.3",
+    "react-refresh": "^0.10.0",
     "rimraf": "^4.1.2",
+    "tailwindcss": "3.2.7",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.9.3"
+    "ts-node": "10.9.1",
+    "typescript": "^4.9.5",
+    "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@swc/helpers": "~0.5.0",
     "@types/highlight.js": "^10.1.0",
     "@types/prettier": "^2.7.2",
     "@types/uuid": "^9.0.1",
@@ -343,7 +375,13 @@
     "axios": "^1.4.0",
     "js-yaml": "^4.1.0",
     "mustache": "^4.2.0",
-    "prettier": "^2.8.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tslib": "^2.3.0",
     "uuid": "^9.0.0"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "private": true
 }
