--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,22 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "ES2020",
-		"outDir": "out",
-		"lib": [
-			"ES2020",
-			"DOM"
-		],
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	},
-	"exclude": ["node_modules", ".vscode-test"]
-
+  "compileOnSave": false,
+  "compilerOptions": {
+    "rootDirs": ["src", "packages/*"],
+    "sourceMap": true,
+    "target": "ES2020",
+    "module": "commonjs",
+    "lib": [
+      "ES2020",
+      "DOM"
+    ],
+    "paths": {
+      "@/*": ["packages/*"]
+    },
+    "baseUrl": "./",
+  },
+  "exclude": [
+    "node_modules",
+    ".vscode-test"
+  ],
+  "strict": true
 }
